--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,8 +1,7 @@
 {
-  "title": "terCAD [Portugal]",
+  "title": "terCAD [Português]",
   "missingContent": "Até agora, falta conteúdo nesta página. Por favor, visite-a mais tarde...",
   "oeuvre": "Criatividade",
-
   "prose": "Prosa",
   "poetry": "Poesia",
   "cognition": "Cognição",
