(#1) Update Flutter template to a basic view. Resolve localization for Navigation

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -3,6 +3,7 @@
   "@title": {
     "description": "Quality Gate Portal für Bildungszwecke"
   },
+  "navigation": "Schifffahrt",
   "missingContent": "Auf dieser Seite fehlt mittlerweile der Inhalt. Bitte besuchen Sie sie später...",
   "oeuvre": "Schaffen",
   "prose": "Prosa",
