--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -3,6 +3,7 @@
   "@title": {
     "description": "Portail de qualité à des fins éducatives"
   },
+  "navigation": "Naviguer",
   "missingContent": "A l'heure actuelle, le contenu de cette page est manquant. Veuillez la visiter plus tard...",
   "oeuvre": "Oeuvre",
   "prose": "Prose",
