--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,5 +1,9 @@
 {
   "title": "terCAD [Português]",
+  "@title": {
+    "description": "Portal Quality Gate para Fins Educacionais"
+  },
+  "navigation": "Navegação",
   "missingContent": "Até agora, falta conteúdo nesta página. Por favor, visite-a mais tarde...",
   "oeuvre": "Criatividade",
   "prose": "Prosa",
