(#1) Update Flutter template to a basic view. Fix modality label

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,7 +11,7 @@
   "cognition": "Cognition",
   "mind": "Mind",
   "methods": "Methods",
-  "sensorModality": "By sensory modality",
+  "sensorModality": "By Sensory Modality",
   "inContent": "In Content",
   "memoryOrganization": "Memory Organization",
   "timeCharacteristics": "Time Characteristics",
